--- a/src/main/resources/com/drronidz/css/listcell/cart_cell.css
+++ b/src/main/resources/com/drronidz/css/listcell/cart_cell.css
@@ -97,3 +97,13 @@
     -fx-background-color: transparent;
 }
 /*********************************** End Cart ListView  Scroll barre ****************************************/
+
+/*cart cell label*/
+.cart-item-label{
+    -fx-font-family: "Titillium Web SemiBold";
+    -fx-font-size: 14;
+}
+.demand-total-label {
+    -fx-font-family: "Titillium Web Bold";
+    -fx-font-size: 15;
+}
