--- a/src/main/resources/com/drronidz/listcell/filter_product_cell.fxml
+++ b/src/main/resources/com/drronidz/listcell/filter_product_cell.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<com.jfoenix.controls.JFXListCell alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<com.jfoenix.controls.JFXListCell alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="500.0" stylesheets="@../css/listcell/fllter_product_cell.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <graphic>
       <GridPane fx:id="filterProductCell" alignment="CENTER" gridLinesVisible="true" hgap="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="57.0" prefWidth="501.0" vgap="2.0">
          <columnConstraints>
@@ -24,29 +24,29 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="ALWAYS" />
          </rowConstraints>
          <children>
-            <Label fx:id="details" graphicTextGap="1.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefHeight="26.0" prefWidth="193.0" styleClass="cart-item-label" stylesheets="@../css/label.css" text="Converse Golliraz Black 43 " wrapText="true">
+            <Label fx:id="details" graphicTextGap="1.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefHeight="26.0" prefWidth="193.0" styleClass="cart-item-label" text="Converse Golliraz Black 43 " wrapText="true">
                <padding>
                   <Insets left="5.0" />
                </padding>
             </Label>
             <HBox prefHeight="66.0" prefWidth="57.0" GridPane.columnIndex="1" GridPane.rowSpan="2">
                <children>
-                  <Label alignment="CENTER_RIGHT" minWidth="-Infinity" prefHeight="67.0" prefWidth="15.0" styleClass="cart-item-label" stylesheets="@../css/label.css" text="x">
+                  <Label alignment="CENTER_RIGHT" minWidth="-Infinity" prefHeight="67.0" prefWidth="15.0" styleClass="cart-item-label" text="x">
                      <padding>
                         <Insets left="5.0" />
                      </padding>
                   </Label>
-                  <Label fx:id="availableQuantity" ellipsisString="" graphicTextGap="0.0" minWidth="-Infinity" prefHeight="78.0" prefWidth="38.0" styleClass="demand-total-label" stylesheets="@../css/label.css" text="1000" wrapText="true" />
+                  <Label fx:id="availableQuantity" ellipsisString="" graphicTextGap="0.0" minWidth="-Infinity" prefHeight="78.0" prefWidth="38.0" styleClass="demand-total-label" text="1000" wrapText="true" />
                </children>
             </HBox>
             <HBox spacing="1.0" GridPane.rowIndex="1">
                <children>
-                  <Label fx:id="price" ellipsisString="" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="26.0" prefWidth="68.0" styleClass="cart-item-label" stylesheets="@../css/label.css" text="1000.00 £" wrapText="true">
+                  <Label fx:id="price" ellipsisString="" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="26.0" prefWidth="68.0" styleClass="cart-item-label" text="1000.00 £" wrapText="true">
                      <padding>
                         <Insets left="5.0" />
                      </padding>
                   </Label>
-                  <Label fx:id="discount" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="28.0" prefWidth="43.0" styleClass="cart-item-label" stylesheets="@../css/label.css" text="-100%" wrapText="true">
+                  <Label fx:id="discount" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="28.0" prefWidth="43.0" styleClass="cart-item-label" text="-100%" wrapText="true">
                      <padding>
                         <Insets left="5.0" />
                      </padding>
@@ -59,18 +59,18 @@
                         <FontIcon iconLiteral="las-tag" iconSize="23" rotate="-110.0" selectionEnd="0" textAlignment="CENTER" wrappingWidth="23.0" />
                      </graphic>
                   </Label>
-                  <Label prefHeight="28.0" prefWidth="36.0" styleClass="taxe-label" stylesheets="@../css/label.css" text="TAXE:" />
-                  <Label fx:id="taxe" alignment="CENTER" contentDisplay="CENTER" prefHeight="31.0" prefWidth="28.0" styleClass="taxe-value-label" stylesheets="@../css/label.css" text="17%" />
+                  <Label prefHeight="28.0" prefWidth="36.0" styleClass="taxe-label" text="TAXE:" />
+                  <Label fx:id="taxe" alignment="CENTER" contentDisplay="CENTER" prefHeight="31.0" prefWidth="28.0" styleClass="taxe-value-label" text="17%" />
                </children>
             </HBox>
             <HBox GridPane.columnIndex="2">
                <children>
-                  <Label fx:id="ref" prefHeight="25.0" prefWidth="87.0" styleClass="cart-item-label" stylesheets="@../css/label.css" text="Ref:">
+                  <Label fx:id="ref" prefHeight="25.0" prefWidth="87.0" styleClass="cart-item-label" text="Ref:">
                      <padding>
                         <Insets left="5.0" />
                      </padding>
                   </Label>
-                  <Label fx:id="ref" graphicTextGap="0.0" prefHeight="29.0" prefWidth="164.0" styleClass="cart-item-label" stylesheets="@../css/label.css" text="#############" />
+                  <Label fx:id="ref" graphicTextGap="0.0" prefHeight="29.0" prefWidth="164.0" styleClass="cart-item-label" text="#############" />
                </children>
             </HBox>
             <HBox GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -83,7 +83,7 @@
                         <FontIcon iconLiteral="las-barcode" iconSize="30" />
                      </graphic>
                   </Label>
-                  <Label fx:id="barCode" graphicTextGap="0.0" prefHeight="33.0" prefWidth="164.0" styleClass="cart-item-label" stylesheets="@../css/label.css" text="############" wrapText="true" />
+                  <Label fx:id="barCode" graphicTextGap="0.0" prefHeight="33.0" prefWidth="164.0" styleClass="cart-item-label" text="############" wrapText="true" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="48.0" prefWidth="38.0" spacing="2.0" GridPane.columnIndex="3" GridPane.rowSpan="2">
